kubernetes/network-policies/02-api-to-notification.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-notification
  namespace: campus-events
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: events-api
      ports:
        - protocol: TCP
          port: 8082
